# airbus_coop_tutorials

./: .travis.rosinstall  README.md
airbus_template_dashboard/: CMakeLists.txt  dashboard_descriptor.xml  package.xml  setup.py
airbus_template_dashboard/src/airbus_template_dashboard/: dashboard.py  res.py
airbus_template_plugin/: CMakeLists.txt  package.xml  plugin_descriptor.xml  setup.py
airbus_template_plugin/src/airbus_template_plugin/: plugin.py  res.py
airbus_templates/: CMakeLists.txt  package.xml
airbus_templates/config/: default.conf  default_dashboards_register.xml  default_plugins_register.xml
airbus_templates/launch/: default.launch
template_dashboard/: CMakeLists.txt  dashboard_descriptor.xml  package.xml
template_dashboard/src/template_dashboard/: dashboard.py
template_plugin/: CMakeLists.txt  package.xml
template_plugin/src/template_plugin/: plugin.py
