<?xml version="1.0"?>
<package>
  <name>airbus_template_plugin</name>
  <version>0.0.1</version>
  <description>The airbus_template_plugin package.</description>
  
  <license>Apache 2.0</license>

  <maintainer email="led@ipa.fhg.de">Ludovic Delval</maintainer>
  <author email="martin.matignon.external@airbus.com">Matignon Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>airbus_cobot_gui</build_depend>
  <build_depend>airbus_pyqt_extend</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>airbus_cobot_gui</run_depend>
  <run_depend>airbus_pyqt_extend</run_depend>
  <run_depend>rospy</run_depend>
  
</package>
